chore: test setting